--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
+spring.datasource.url=jdbc:mysql://80.78.246.73:3306/db_security
+spring.datasource.username=root
+spring.datasource.password=x0HuDgA5L2df
+server.port=8081
+#server.servlet.context-path=/spring-boot
 
+spring.jpa.hibernate.ddl-auto=update
+
+
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type=TRACE
