- Rename UserController -> AdminController - WebSecurityConfig  ->  change antMatchers for role_admin - User  ->  FetchType.LAZY UserServiceImpl.java  -> add Hibernate initialize user roles, because of the introduction FetchType.LAZY. - general work on the design of html pages

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,8 @@ server.port=8081
 
 spring.jpa.hibernate.ddl-auto=update
 
+#server.error.path=/error
+
 
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type=TRACE
